fix: title css flex-wrap

--- a/packages/frontend/src/pages/admin/admin.module.css
+++ b/packages/frontend/src/pages/admin/admin.module.css
@@ -95,6 +95,7 @@
 
 .FundingTitle{
   display:flex;
+  flex-wrap: wrap;
   font-weight: 700;
   font-size: 20px;
   text-overflow: ellipsis;
